# Bin-Diff

./: .gitignore  .~lock.test.csv#  Cargo.toml  test2.csv  test3.csv
src/: bin_compare.rs  file_reader.rs  main.rs
